# personal_assistant_chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/commons/app_errors/: __init__.py  errors.py
src/commons/datetime_utils/: __init__.py  utils.py
src/commons/db/: sqlalchemy.py
src/commons/entities/: __init__.py  base.py  entity_id_impl.py
src/commons/events/: __init__.py  application_events.py  domain_events.py  event_dispatcher.py  event_dispatcher_impl.py
src/personal_assistant/framework/di/: container.py
src/personal_assistant/framework/di/providers/: db_repositories.py  use_cases.py
src/personal_assistant/infrastructure/database/: __init__.py  engine.py  mapping.py  meta.py  settings.py
src/personal_assistant/infrastructure/database/alembic/: env.py
src/personal_assistant/infrastructure/database/repositories/: __init__.py  food_ration_day_read_repo.py
src/personal_assistant/infrastructure/tg_bot/: __init__.py  dispatcher.py  settings.py
src/personal_assistant/infrastructure/tg_bot/handlers/: __init__.py  default.py  food_ration.py  start.py
src/personal_assistant/infrastructure/tg_chat_bot/: bot.py  dispatcher.py
src/personal_assistant/infrastructure/tg_chat_bot/handlers/: __init__.py  default.py  food_ration.py  start.py
src/personal_assistant/infrastructure/tg_chat_bot/keyboards/: main_menu.py
src/personal_assistant/modules/food_ration/application/dtos/: __init__.py  date_food_ration_day_dto.py
src/personal_assistant/modules/food_ration/application/interfaces/: __init__.py  food_ration_day_read_repo.py
src/personal_assistant/modules/food_ration/application/use_cases/: __init__.py  get_food_ration_for_today.py
src/personal_assistant/modules/food_ration/domain/: __init__.py  domain_events.py  errors.py
src/personal_assistant/modules/food_ration/domain/entities/: __init__.py  food_ration.py  food_ration_day.py
src/personal_assistant/run/: tg_chat_bot_polling.py
tests/: conftest.py
tests/personal_assistant/infrastructure/tg_bot/handlers/: test_default.py
tests/personal_assistant/infrastructure/tg_bot/keyboards/: test_main_menu.py
tests/personal_assistant/integration/infrastructure/tg_bot/handlers/: test_default.py  test_food_ration.py
tests/personal_assistant/integration/infrastructure/tg_bot/keyboards/: test_main_menu.py
tests/personal_assistant/unit/modules/food_ration/application/use_cases/: test_get_food_ration_for_today.py
tests/personal_assistant/unit/modules/food_ration/domain/entities/: test_food_ration.py  test_food_ration_day.py
