[project]
name = "personal-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "alembic==1.16.4",
    "litestar==2.17.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.43",
]
[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true

[tool.ruff]
src = ["src"]
line-length = 80

[tool.ruff.lint]
select = [
    # isort
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
