[project]
name = "personal-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "alembic==1.16.4",
    "litestar==2.17.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.43",
]
[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
ignore_missing_imports = false
implicit_reexport = true
exclude = "(^|/)(.venv|env|build|dist|migrations|alembic)/"
mypy_path = ["commons", "src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "pytest",
  "pytest.*",
  "pytest_mock",
  "pytest_mock.*",
  "freezegun",
  "freezegun.*",
]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
